cleaned ray computations